improve function select

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=7825684407:AAFlEHPL8BwdqIetoOfAObQYtn5nXgMPzF0
-ADMIN_IDS=-1003684595914
+BOT_TOKEN=8282725731:AAE8qcsQ72kbKWGuEoAL9EhEPcEoR8orBJ4
+ADMIN_IDS=8282725731
