--- a/.env
+++ b/.env
@@ -1,2 +1,18 @@
 BOT_TOKEN=8282725731:AAG6DEU563vIrHNT-wsAUfVER9DnM15IMas
 ADMIN_IDS=93372553
+# Telegram Bot
+
+# Database Configuration
+MYSQLHOST=127.0.0.1
+MYSQLPORT=3306
+MYSQLUSER=root
+MYSQLPASSWORD=root
+MYSQLDATABASE=konchat_db
+
+# Bot Settings
+ADMIN_USER_IDS=123456789,987654321
+LOG_LEVEL=INFO
+
+# Railway specific (will be auto-injected)
+PORT=8000
+RAILWAY_ENVIRONMENT=production
